[package]
name = "sf2web"
version = "0.1.0"
authors = ["Ell <alan@cattes.us>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.39"
lazy_static = "1.4.0"
serde-wasm-bindgen = "0.1.3"

[dependencies.fluidlite]
version = "0.1.2"
features = ["generate-bindings"]

[dependencies.wasm-bindgen]
version = "0.2.62"
features = ["serde-serialize"]

[dependencies.serde]
version = "1.0.110"
features = [
    "derive",
]

[dependencies.web-sys]
version = "0.3.39"
features = [
    "Document",
    "Element",
    "Window",
    "MouseEvent",
    "EventTarget",
    "console",
]
